logging/elastic/elasticsearch-ingress.yaml
  # HTTPS Ingress
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: elasticsearch-ingress
    namespace: elastic
    annotations:
      # Enable cert-manager to create automatically the SSL certificate and store in Secret
      cert-manager.io/cluster-issuer: ca-issuer
      cert-manager.io/common-name: elasticsearch.local.test
  spec:
    ingressClassName: nginx
    tls:
      - hosts:
          - elasticsearch.local.test
        secretName: elasticsearch-tls
    rules:
      - host: elasticsearch.local.test
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: efk-es-http
                  port:
                    number: 9200
